# emacs-themes-templated

./: .gitignore  README.md
color_permute/: Cargo.toml  README.md
color_permute/src/: color_permutations.rs  main.rs
colorthief/: README.md  colorthief-example.js  package-lock.json  package.json
theme-generator/: Cargo.toml  README.md
theme-generator/src/: main.rs
