[package]
name = "theme-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0"  # Version number may vary
serde_json = "1.0.0"  # Version number may vary
itertools = "0.10.0"  # Version number may vary
